recursion.lessons.recursion.tree.Tree.scala.error
Tree:9: error: type mismatch;
 found   : Double
 required: Int
	e = Math.floor(p)
                      ^Tree:10: error: too many arguments for method current: (v: Int)Unit
	current(steps,5)
               ^