recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	var p = length
	var e = 0

	tree(steps, length, angle, shrink) 
	p = p/shrink
	e = Math.floor(p)
	current(steps,5)
	


	

	
	
	
}
